# perceptron

./: .gitignore  README.md  demo_mnist.py  pyproject.toml
nn/: __init__.py  layers.py  losses.py  model.py  optimizers.py
tests/: test_layers.py  test_losses.py  test_model.py  test_optimizers.py
