[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "neural-net"
version = "0.1.0"
description = "A neural network framework from scratch using only NumPy"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
demo = ["scikit-learn>=1.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
